Increase width of game name to prevent wrapping

--- a/public/main.css
+++ b/public/main.css
@@ -94,7 +94,7 @@ h3 {
   justify-content: center;
   padding: 0 15px 0;
   align-items: center;
-  max-width: 300px;
+  max-width: 350px;
   flex-direction: column;
   color: white;
 }
